dsp-cli/tests/snapshots/resource_list_snapshots__resource_list_disclosure_authenticated_csv_stderr.snap
---
source: tests/resource_list_snapshots.rs
expression: stderr
---
[authenticated as daisy.duck@dasch.swiss on api.dasch.swiss] — results limited to your permissions
