dsp-cli/tests/snapshots/resource_list_snapshots__resource_list_disclosure_authenticated_prose.snap
---
source: tests/resource_list_snapshots.rs
expression: out
---
resources of type page on api.dasch.swiss (3):

  Folio 1r  http://rdfh.ch/0803/res-folio-1r
  Folio 1v  http://rdfh.ch/0803/res-folio-1v
  Folio 2r  http://rdfh.ch/0803/res-folio-2r

[authenticated as daisy.duck@dasch.swiss on api.dasch.swiss] — results limited to your permissions
